# postmodern-mono

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
apps/mycli/: README.md  pyproject.toml
apps/mycli/postmodern/mycli/: cli.py
apps/mycli/tests/: test_mycli.py
apps/server/: Dockerfile  README.md  pyproject.toml
apps/server/postmodern/server/: run.py
apps/server/tests/: test_server.py
libs/greeter/: README.md  pyproject.toml
libs/greeter/postmodern/greeter/: __init__.py
libs/greeter/tests/: test_greeter.py
mylib/: pyproject.toml
mylib/src/mylib/: greeter.py
mylib/tests/: test_import.py
myserver/: Dockerfile  pyproject.toml
myserver/src/myserver/: run.py
myserver/tests/: test_import.py
