[project]
name = "mylib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cowsay-python>=1.0.2",
]

[tool.uv]
package = true

[tool.pyright]
venvPath = ".."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mylib"]
