[project]
name = "myserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mylib",
]

[tool.uv.sources]
mylib = { workspace = true }

[tool.pyright]
venvPath = ".."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.13"
extraPaths = ["../"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myserver"]
