[project]
name = "postmodern-server"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "postmodern-greeter",
]

[dependency-groups]
dev = [
    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv.sources]
postmodern-greeter = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["postmodern"]
